// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <span
      class="MuiBadge-root"
    >
      <span
        class="MuiBadge-badge PicassoBadge-root PicassoBadge-white PicassoBadge-large PicassoBadge-static MuiBadge-anchorOriginTopRightRectangular"
      >
        5
      </span>
    </span>
  </div>
</div>
`;

exports[`Badge renders in red variant 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <span
      class="MuiBadge-root"
    >
      <span
        class="MuiBadge-badge PicassoBadge-root PicassoBadge-red PicassoBadge-large PicassoBadge-static MuiBadge-anchorOriginTopRightRectangular"
      >
        5
      </span>
    </span>
  </div>
</div>
`;
